tests/NormalTests/paczka1/fuzzy1/64120092.err
Error in line 3: W8ArUg A885 76,9
Error in line 9: 6zBJ7f A214 50,6
Error in line 11: l6bwiy A885 18,7
Error in line 19: W8ArUg A885 59,1
Error in line 22: W8ArUg A214 4,7
Error in line 18: l6bwiy A554 72,3
